--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html, body {
   height: 100%;
   position: relative;
   overflow: hidden;
-  font-family: 'Hello', Arial, Sans;
+  font-family: 'Helvetica', Arial, Sans;
   font-weight: normal;
   font-style: normal;
   background: url(../images/bg-01.png) repeat 0 0;
@@ -107,10 +107,10 @@ html, body {
 
 #event .description p{
   margin: 30px auto;
-  text-align: left;
+  text-align: center;
   color: #fff;
-  font-size: 26px;
-  line-height: 24px;
+  font-size: 24px;
+  line-height: 36px;
   text-shadow: 0 4px 0 #000;
 }
 
@@ -149,8 +149,8 @@ html, body {
   font-size: 20px;
   line-height: 20px;
   text-shadow: 0 3px 0 #000;
-  box-shadow:
-    inset 0 4px 0 #555;
+  box-shadow: inset 0 4px 0 #555;
+  color: #fff;
 }
 
 #exits li:nth-child(even) {
@@ -164,17 +164,21 @@ html, body {
   transform: translate(-50%, -50%);
   display: block;
   text-align: center;
-  color: #fff;
+
   cursor: pointer;
 }
 
 #exits:hover li{
-  opacity:0.5;
+  background: #333;
+  box-shadow: inset 0 4px 0 #444;
+  color: #ccc;
 }
 
 #exits li:hover {
   bottom: -10%;
-  opacity:1;
+  background: #444;
+  box-shadow: inset 0 4px 0 #555;
+  color: #fff;
 }
 
 #exits.single li {
