--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,17 @@ html, body {
   border: 4px solid #222;
   */
   border-radius: 50%;
+  overflow: hidden;
+  transition: all 0.3s ease; /* for color switch */
+}
+
+#event .visual .inner .illu{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/illu/sprite-01.png);
+  background-repeat: no-repeat;
+  /* background-size: auto 100%; */
 }
 
 #event .description {
