--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ html, body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url(../images/illu/sprite-01.png);
+  background-image: url(../images/sprite-01.png);
   background-repeat: no-repeat;
   /* background-size: auto 100%; */
 }
