--- a/editor/public/css/style.css
+++ b/editor/public/css/style.css
@@ -101,3 +101,8 @@ ul.tree, ul.tree ul {
   a.nodeCreate {
     color: #cc0066;
   }
+
+.newObj {
+  white-space: pre;
+  font-family: monospace;
+}
