--- a/editor/public/css/style.css
+++ b/editor/public/css/style.css
@@ -5,6 +5,7 @@
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
   padding-top: 4.5rem;
+  position: relative;
 }
 
 h1 {
@@ -111,4 +112,65 @@ ul.tree, ul.tree ul {
   padding: 1rem;
   display: none;
   margin-top: 1rem;
+}
+
+.imgContainer {
+  width: 100%;
+  background: #999;
+  border-radius: 50%;
+  position: relative;;
+}
+
+.imgContainer a,
+.imgContainer a:hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.imgContainer a span {
+  display: block;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  color: #fff;
+}
+
+.overlay {
+    height: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 1040;
+    left: 0;
+    top: 0;
+    background-color: #222;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
 }
