--- a/editor/public/css/style.css
+++ b/editor/public/css/style.css
@@ -118,7 +118,7 @@ ul.tree, ul.tree ul {
   width: 100%;
   background: #999;
   border-radius: 50%;
-  position: relative;;
+  position: relative;
 }
 
 .imgContainer a,
@@ -147,15 +147,19 @@ ul.tree, ul.tree ul {
     top: 0;
     background-color: #222;
     overflow-x: hidden;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
+  display: block;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  height: 80%;
+  width: 80%;
+  left: 50%;
+  margin-left: -40%;
 }
 
 .overlay .closebtn {
@@ -163,6 +167,16 @@ ul.tree, ul.tree ul {
     top: 20px;
     right: 45px;
     font-size: 60px;
+}
+
+.overlay .list-visuals {
+  position: absolute;
+  overflow-y: scroll;
+  height: 100%;
+  right: -17px;
+  left: 0;
+  top: 0;
+  bottom: 0;
 }
 
 
